[package]
name = "schemat"
description = "A code formatter for Scheme, Lisp, and any S-expressions"
version = "0.4.1"
edition = "2024"
license = "Unlicense"
repository = "https://github.com/raviqqe/schemat"
readme = "./README.md"
keywords = ["format", "scheme"]

[dependencies]
allocator-api2 = "0.2.21"
bumpalo = { version = "3.19.0", features = ["allocator-api2"] }
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
glob = "0.3.2"
mfmt = "0.4.0"
nom = "8.0.0"
nom_locate = "5.0.0"
tokio = { version = "1.45.1", default-features = false, features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread",
] }

[dev-dependencies]
indoc = "2.0.6"
pretty_assertions = "1.4.1"
